compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__traits__typech_trait_extraneous_method.snap
---
source: compiler/lume_typech/src/tests/check/traits.rs
description: "struct A { }\n\n        trait Foo { }\n\n        use Foo in A {\n            fn foo() { }\n        }"
---
× error[LM4162]: extraneous method in implementation
   ╭───────────
 4 │ 
 5 │         use Foo in A {
   │         ^ implemented method foo does not exist in trait definition
 6 │             fn foo() { }
 7 │         }
   ╰──
